do html structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <div class="logos">
+        <img src="./images/Vector.svg" alt="logo image" />
+        <div class="search_box">
+          <img src="./images/search.png" alt="" />
+        </div>
+        <nav>
+          <a href="./index.html">
+            <img src="./images/home.png" alt="home logo" />
+          </a>
+          <a href="#">
+            <img src="./images/Vector.png" alt="Dashboard logo" />
+          </a>
+          <a href="#">
+            <img src="./images/file-text.png" alt="projects logo" />
+          </a>
+          <a href="#">
+            <img src="./images/layers.png" alt="tasks logo" />
+          </a>
+          <a href="#">
+            <img src="./images/sliders.png" alt="reporting logo" />
+          </a>
+        </nav>
+        <div class="additional_settings">
+          <a href="#">
+            <img src="./images/bell.png" alt="notifications logo" />
+          </a>
+          <a href="#">
+            <img src="./images/help-circle.png" alt="support logo" />
+          </a>
+          <a href="#">
+            <img src="./images/settings.png" alt="settings logo" />
+          </a>
 
+          <a href="#">
+            <img src="./images/avatar (1).png" alt="" />
+          </a>
+        </div>
+      </div>
+      <div class="texts">
+        <h1>Untitled</h1>
+        <input type="search" placeholder="Search" />
+
+        <div class="navigation">
+          <a href="./index.html">Home</a>
+          <a href="#">Dashboard</a>
+          <a href="#">Projects</a>
+          <a href="#">Tasks</a>
+          <a href="#">Reporting</a>
+        </div>
+
+        <div class="additional_settings_texts">
+            <a href="#">Notifications</a>
+            <a href="#">Suport</a>
+            <a href="#">Settings</a>
+
+            <div class="use">
+                <p class="username">Brooklyn Simmons</p>
+                <span class="mail">brooklyn@simmons.com</span>
+            </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
