--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <body>
     <header>
       <div class="logos">
+        <div class="main_logo">
         <img src="./images/Vector.svg" alt="logo image" />
+        </div>
         <div class="search_box">
           <img src="./images/search.png" alt="" />
         </div>
-        <nav>
+        <nav class="flex-column">
           <a href="./index.html">
             <img src="./images/home.png" alt="home logo" />
           </a>
@@ -30,7 +32,7 @@
             <img src="./images/sliders.png" alt="reporting logo" />
           </a>
         </nav>
-        <div class="additional_settings">
+        <div class="additional_settings flex-column">
           <a href="#">
             <img src="./images/bell.png" alt="notifications logo" />
           </a>
