transition ov hover

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="logos">
         <div class="main_logo">
-        <img src="./images/Vector.svg" alt="logo image" />
+          <img src="./images/Vector.svg" alt="logo image" />
         </div>
         <div class="search_box">
           <img src="./images/search.png" alt="" />
@@ -42,17 +42,18 @@
           <a href="#">
             <img src="./images/settings.png" alt="settings logo" />
           </a>
-
+           <div class="avatar_logo">
           <a href="#">
             <img src="./images/avatar (1).png" alt="" />
           </a>
+          </div>
         </div>
       </div>
       <div class="texts">
         <h1>Untitled</h1>
         <input type="search" placeholder="Search" />
 
-        <div class="navigation">
+        <div class="navigation flex-column">
           <a href="./index.html">Home</a>
           <a href="#">Dashboard</a>
           <a href="#">Projects</a>
@@ -60,15 +61,15 @@
           <a href="#">Reporting</a>
         </div>
 
-        <div class="additional_settings_texts">
-            <a href="#">Notifications</a>
-            <a href="#">Suport</a>
-            <a href="#">Settings</a>
+        <div class="additional_settings_texts flex-column">
+          <a href="#">Notifications</a>
+          <a href="#">Suport</a>
+          <a href="#">Settings</a>
 
-            <div class="use">
-                <p class="username">Brooklyn Simmons</p>
-                <span class="mail">brooklyn@simmons.com</span>
-            </div>
+          <div class="user flex-column">
+            <p class="username">Brooklyn Simmons</p>
+            <span class="mail">brooklyn@simmons.com</span>
+          </div>
         </div>
       </div>
     </header>
